# greploom

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  llms-full.txt  llms.txt  pyproject.toml
.claude/commands/: create-release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml  test.yml
retrospectives/2026-04-09_v0.2.0-agent-feedback/: RETRO.md
retrospectives/2026-04-18_v0.6.0-openai-embeddings/: RETRO.md
scripts/: release.sh
src/greploom/: __init__.py  cli.py  config.py  cpg_types.py
src/greploom/cli/: __init__.py  index_cmd.py  query_cmd.py  serve_cmd.py
src/greploom/index/: __init__.py  embedder.py  store.py  summarizer.py
src/greploom/mcp/: server.py
src/greploom/search/: budget.py  expand.py  hybrid.py
tests/: test_config.py  test_cpg_types.py
tests/fixtures/: medium_cpg.json  small_cpg.json  small_cpg_with_source.json
tests/test_cli/: test_commands.py  test_integration.py
tests/test_index/: test_embedder.py  test_orchestrator.py  test_store.py  test_summarizer.py
tests/test_mcp/: test_server.py
tests/test_search/: test_budget.py  test_expand.py  test_hybrid.py
