[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greploom"
version = "0.3.0"
description = "Semantic code search with graph-aware context retrieval, built on treeloom"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rdwj" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "treeloom>=0.6.0",
    "sqlite-vec>=0.1.0",
    "apsw>=3.45",
    "click>=8.2",
    "tiktoken>=0.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3.0"]
mcp = ["fastmcp>=2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
greploom = "greploom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/greploom"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
